// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Code /> Renders Code elements with language 1`] = `
<div>
  <div
    class="overflow-auto relative p-16"
    data-testid="code-block"
    lang="ruby"
  >
    <code
      style="white-space: pre-wrap;"
    >
      function (_a, _b, _c, _d) {
        return fn.apply(this, arguments);
      }
    </code>
  </div>
  <div
    class="absolute top-14 right-16"
  >
    <div
      class="relative"
    >
      <button
        class="button text-white"
        type="button"
      >
        <svg
          class="white "
          style="width: 1rem; height: 1rem;"
        >
          <use
            xlink:href="#sprite-icon-gui-copy"
          />
        </svg>
      </button>
      <div
        class="tooltipClass"
        role="tooltip"
      >
        <span>
          Copy
        </span>
      </div>
      <div
        class="notificationClass"
      >
        <span>
          Copied!
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Code /> Updates the codeblock when language is switched 1`] = `
<div
  class="overflow-auto relative p-16"
  data-testid="code-block"
  lang="ruby"
>
  <code
    style="white-space: pre-wrap;"
  >
    function (_a, _b, _c, _d) {
        return fn.apply(this, arguments);
      }
  </code>
</div>
`;

exports[`<Code /> Updates the codeblock when language is switched 2`] = `
<div
  class="overflow-auto relative p-16"
  data-testid="code-block"
  lang="sh"
>
  <code
    style="white-space: pre-wrap;"
  >
    function (_a, _b, _c, _d, _e, _f, _g, _h, _i) {
        return fn.apply(this, arguments);
      }
  </code>
</div>
`;
